
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrincipalActivity"
    android:background="@color/md_text_white"
    android:weightSum="1"
    android:orientation="vertical">


    <FrameLayout
        android:id="@+id/FrameLayoutToolbar"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:background="?attr/colorPrimaryDark"/>

    <android.support.design.widget.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/AppTheme.AppBarOverlay">

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay"/>
    </android.support.design.widget.AppBarLayout>

    <ImageView
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="20dp"
        android:id="@+id/imageViewLogo"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/image_view_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/principal_selecciona_opcion"
        android:id="@+id/textView"
        android:textStyle="bold"
        android:textColor="@color/md_secondary_text_icons"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/txt_boton_nuevos"
            android:textColor="@color/md_text_white"
            android:textStyle="bold"
            android:id="@+id/buttonBuscarNuevos"
            android:background="@drawable/button_rectangulo"
            android:onClick="buscarNuevosClick"/>

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/txt_boton_guardados"
            android:textColor="@color/md_text_white"
            android:textStyle="bold"
            android:id="@+id/buttonBuscarActuales"
            android:background="@drawable/button_rectangulo"
            android:onClick="buscarActualesClick"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/txt_boton_opciones_nfc"
            android:textColor="@color/md_text_white"
            android:textStyle="bold"
            android:id="@+id/buttonOpcionesNFC"
            android:background="@drawable/button_rectangulo"
            android:onClick="opcionesNFCClick"/>

    </LinearLayout>

</LinearLayout>

