<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_text_white">

    <FrameLayout
        android:id="@+id/FrameLayoutToolbar"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:background="?attr/colorPrimaryDark"/>

    <android.support.design.widget.AppBarLayout android:layout_height="wrap_content"
        android:layout_width="match_parent" android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="wrap_content">

        <TextView android:id="@+id/device_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="Dispositivo"
            android:textSize="22dp"
            android:textStyle="bold"
            android:textColor="@color/md_secondary_text_icons"/>

        <LinearLayout android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_state"
                android:textSize="18dp"
                android:textColor="@color/md_secondary_text_icons"/>
            <Space android:layout_width="5dp"
                android:layout_height="wrap_content"/>
            <TextView android:id="@+id/connection_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/disconnected"
                android:textSize="18dp"
                android:textColor="@color/md_secondary_text_icons"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Desconectar"
                android:textSize="10dp"
                android:background="@android:drawable/editbox_background"
                android:textColor="@color/md_secondary_text_icons"
                android:id="@+id/buttonConectarControl" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/drawable_fondo_secciones"></LinearLayout>
    </LinearLayout>

    <LinearLayout android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/text_Distancia"
            android:textStyle="bold"
            android:id="@+id/textView2"
            android:textColor="@color/md_secondary_text_icons"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Larga Distancia\n   (10m a 14m)"
            android:textColor="@color/md_secondary_text_icons"
            android:id="@+id/radioButtonLargaDistancia" />

        <Space
            android:layout_width="20px"
            android:layout_height="20px" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Corta Distancia\n    (6m a 10m)"
            android:textColor="@color/md_secondary_text_icons"
            android:id="@+id/radioButtonCortaDistancia" />
    </LinearLayout>

        <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/drawable_fondo_secciones"></LinearLayout>
    </LinearLayout>

    <ToggleButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:id="@+id/toggleButtonRSSI"
        android:background="@android:drawable/editbox_background"
        android:textColor="@color/md_secondary_text_icons"
        android:textOff="Inciar Monitoreo"
        android:textOn="Detener Monitoreo"
        android:checked="false" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/drawable_fondo_secciones"></LinearLayout>

    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/text_ValorRSSI"
            android:id="@+id/textView"
            android:textColor="@color/md_secondary_text_icons"/>

        <Space android:layout_width="5dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/textViewDBM"
            android:textColor="@color/md_secondary_text_icons"/>

    </LinearLayout>

</LinearLayout>